--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
 
+#Setting Liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/changelog/master_changelog.xml
+
 
 
